# tak-interop

./: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
takinterop/: __init__.py  asset.schema.json  cli.py  kml.py  mission.py  product.schema.json  products.py  qr.py  uri.py  validators.py  web.py
takinterop/web/: camera-profile.css  camera-profile.js
tests/: test_interop.py  test_web.py
