[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "snstac-tak-interop"
version = "1.1.0"
description = "Shared TAK product catalogs, mission packages, handoff URIs, and validators"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = []

[project.optional-dependencies]
qr = ["qrcode[pil]>=8,<9"]
test = ["pytest>=8,<9", "qrcode[pil]>=8,<9"]

[project.scripts]
tak-validate = "takinterop.cli:main"

[tool.setuptools.packages.find]
include = ["takinterop*"]

[tool.setuptools.package-data]
takinterop = ["product.schema.json", "asset.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
